--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    <script src="./js/vconsole.min.js"></script>
+    <script>
+      var vConsole = new VConsole();
+    </script>
+
   </body>
 </html>
